ribbon-theme.css
:root {
    --ribbonTransition: 0.5s;
    --ribbonSpacing: 3px;
    --ribbonSidebarSize: 28px;
    --ribbonFooterSize: 24px;
}

/* background color */

#browser {
    background-image: none !important;
    background-color: var(--colorAccentBg) !important;
}

.startpage {
    background-image: var(--ribbonBackgroundImage) !important;
    background-position: center !important;
    background-size: cover !important;
}

/* colors */

.accordion-toggle-arrow,
#browser.color-behind-tabs-on .UrlBar-AddressField {
    background-color: var(--colorAccentBgAlphaHeavy) !important;
}

#browser.color-behind-tabs-off #header,
#browser:not(.fullscreen).color-behind-tabs-on .mainbar,
#browser.color-behind-tabs-off .UrlBar-AddressField,
#browser.color-behind-tabs-on .tab.active,
#panels-container,
footer,
#mail_search .list-wrapper {
    background-color: var(--colorBgAlphaBlur) !important;
}

.OmniDropdown,
.modal-wrapper,
.startpage-navigation,
.SpeedDial-Blocked-Counter,
.dial {
    background-color: var(--colorBgAlphaBlur) !important;
    backdrop-filter: var(--backgroundBlur) !important;
}

#browser.color-behind-tabs-off #tabs-tabbar-container,
.quick-commands,
.tab.active:before,
.tab.active:after,
footer::after {
    background-color: transparent !important;
}

#panels #switch {
    backdrop-filter: none !important;
}

/* color transitions */

#browser, #header, #tabs-tabbar-container, .tab.active, .mainbar {
    transition: background-color var(--ribbonTransition), border-color var(--ribbonTransition) !important;
}

/* ribbon spacing */

#browser:not(.fullscreen) {
    padding: var(--ribbonSpacing) !important;
}

#browser.color-behind-tabs-off #tabs-tabbar-container {
    padding-top: var(--ribbonSpacing) !important;
    padding-bottom: var(--ribbonSpacing) !important;
}

#browser:not(.fullscreen) #header,
#browser:not(.fullscreen) .mainbar {
    margin-bottom: var(--ribbonSpacing) !important;
}

#browser:not(.fullscreen) #panels-container.left:not(.switcher) {
    margin-right: var(--ribbonSpacing) !important;
}

#browser:not(.fullscreen) #panels-container.overlay .panel-group {
    margin-left: var(--ribbonSpacing) !important;
}

#browser:not(.fullscreen) footer:has(div) {
    margin-top: var(--ribbonSpacing) !important;
}

/* border radius */

.tab.active {
    border-bottom-left-radius: var(--radiusHalf) !important;
    border-bottom-right-radius: var(--radiusHalf) !important;
}

#browser:not(.fullscreen) #header,
#browser:not(.fullscreen) #tabs-tabbar-container,
#browser:not(.fullscreen) .mainbar,
#browser:not(.fullscreen) #panels-container,
#browser:not(.fullscreen) .panel-group,
#browser:not(.fullscreen) #webview-container,
#browser:not(.fullscreen) #webpage-stack,
#browser:not(.fullscreen) footer {
    border-radius: var(--radius) !important;
}

/* sidebar size */

#panels-container.icons,
#panels-container.overlay,
#panels,
#switch,
.toolbar-panel,
.toolbar-panel .button-toolbar {
    width: var(--ribbonSidebarSize) !important;
}

#switch {
    flex: 0 0 var(--ribbonSidebarSize) !important;
    max-width: var(--ribbonSidebarSize) !important;
}

.panel-group {
    left: var(--ribbonSidebarSize) !important;
}

/* center tabs */

#app.RibbonCenterTabs .tab-strip {
    display:flex;
    flex-direction:row;
    justify-content:center;
}

#app.RibbonCenterTabs .tab-position {
    position: initial;
    --PositionX:0 !important;
}

#app.RibbonCenterTabs .tab-strip .newtab {
    left:0 !important;
}

/* fixes and decorations */

button.vivaldi {
    display: none !important;
}

#tabs-container {
    padding-left: 0px !important;
}

#browser.normal #tabs-tabbar-container {
    padding-top: 0px !important;
}

.tab.active {
    height: 29px !important;
}

.stack-frame {
    stroke-width: 3px !important;
}

.mainbar {
    border-width: 0 !important;
}

.UrlBar-AddressField {
    border: none !important;
}

.progress-done {
    opacity: 0 !important;
    transition: opacity var(--ribbonTransition) !important;
}

.panel-collapse-guard {
    min-width: auto !important;
    max-width: none !important;
}

#panels-container.switcher {
    width: 0 !important;
}

header.webpanel-header,
.startpage-navigation,
.tile,
.webpageview.tiled:not(.active) {
    box-shadow: none !important;
}

#webview-container:has(#webpage-stack .tiled.visible) {
    padding: 0px !important;
    box-shadow: none !important;
}

footer .toolbar-statusbar,
footer .toolbar-statusbar .button-toolbar button {
    height: var(--ribbonFooterSize) !important;
}

